added model configs

--- a/hface/InternVL3.5.ipynb
+++ b/hface/InternVL3.5.ipynb
@@ -10,113 +10,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "91370b5e-0770-484a-83ae-2c7d79db752d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The following generation flags are not valid and may be ignored: ['temperature', 'top_p']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FlashAttention2 is not installed.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'decord'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mT\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdecord\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VideoReader, cpu\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mPIL\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctional\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m InterpolationMode\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'decord'"
      ]
     }
    ],
    "source": [
+    "import math\n",
+    "import numpy as np\n",
     "import torch\n",
+    "import torchvision.transforms as T\n",
+    "from decord import VideoReader, cpu\n",
     "from PIL import Image\n",
-    "from transformers import AutoModel, AutoTokenizer, GenerationConfig\n",
+    "from torchvision.transforms.functional import InterpolationMode\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
     "\n",
-    "# Prepare generation config\n",
-    "gen_config = GenerationConfig(\n",
-    "    max_new_tokens=128,\n",
-    "    temperature=0.7,\n",
-    "    top_p=0.9\n",
-    ")\n",
+    "IMAGENET_MEAN = (0.485, 0.456, 0.406)\n",
+    "IMAGENET_STD = (0.229, 0.224, 0.225)\n",
     "\n",
-    "# Load tokenizer (needed for chat)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"OpenGVLab/InternVL3_5-1B\", trust_remote_code=True)\n",
+    "def build_transform(input_size):\n",
+    "    MEAN, STD = IMAGENET_MEAN, IMAGENET_STD\n",
+    "    transform = T.Compose([\n",
+    "        T.Lambda(lambda img: img.convert('RGB') if img.mode != 'RGB' else img),\n",
+    "        T.Resize((input_size, input_size), interpolation=InterpolationMode.BICUBIC),\n",
+    "        T.ToTensor(),\n",
+    "        T.Normalize(mean=MEAN, std=STD)\n",
+    "    ])\n",
+    "    return transform\n",
     "\n",
-    "# Load model with FP16 and low CPU memory usage\n",
+    "def find_closest_aspect_ratio(aspect_ratio, target_ratios, width, height, image_size):\n",
+    "    best_ratio_diff = float('inf')\n",
+    "    best_ratio = (1, 1)\n",
+    "    area = width * height\n",
+    "    for ratio in target_ratios:\n",
+    "        target_aspect_ratio = ratio[0] / ratio[1]\n",
+    "        ratio_diff = abs(aspect_ratio - target_aspect_ratio)\n",
+    "        if ratio_diff < best_ratio_diff:\n",
+    "            best_ratio_diff = ratio_diff\n",
+    "            best_ratio = ratio\n",
+    "        elif ratio_diff == best_ratio_diff:\n",
+    "            if area > 0.5 * image_size * image_size * ratio[0] * ratio[1]:\n",
+    "                best_ratio = ratio\n",
+    "    return best_ratio\n",
+    "\n",
+    "def dynamic_preprocess(image, min_num=1, max_num=12, image_size=448, use_thumbnail=False):\n",
+    "    orig_width, orig_height = image.size\n",
+    "    aspect_ratio = orig_width / orig_height\n",
+    "\n",
+    "    # calculate the existing image aspect ratio\n",
+    "    target_ratios = set(\n",
+    "        (i, j) for n in range(min_num, max_num + 1) for i in range(1, n + 1) for j in range(1, n + 1) if\n",
+    "        i * j <= max_num and i * j >= min_num)\n",
+    "    target_ratios = sorted(target_ratios, key=lambda x: x[0] * x[1])\n",
+    "\n",
+    "    # find the closest aspect ratio to the target\n",
+    "    target_aspect_ratio = find_closest_aspect_ratio(\n",
+    "        aspect_ratio, target_ratios, orig_width, orig_height, image_size)\n",
+    "\n",
+    "    # calculate the target width and height\n",
+    "    target_width = image_size * target_aspect_ratio[0]\n",
+    "    target_height = image_size * target_aspect_ratio[1]\n",
+    "    blocks = target_aspect_ratio[0] * target_aspect_ratio[1]\n",
+    "\n",
+    "    # resize the image\n",
+    "    resized_img = image.resize((target_width, target_height))\n",
+    "    processed_images = []\n",
+    "    for i in range(blocks):\n",
+    "        box = (\n",
+    "            (i % (target_width // image_size)) * image_size,\n",
+    "            (i // (target_width // image_size)) * image_size,\n",
+    "            ((i % (target_width // image_size)) + 1) * image_size,\n",
+    "            ((i // (target_width // image_size)) + 1) * image_size\n",
+    "        )\n",
+    "        # split the image\n",
+    "        split_img = resized_img.crop(box)\n",
+    "        processed_images.append(split_img)\n",
+    "    assert len(processed_images) == blocks\n",
+    "    if use_thumbnail and len(processed_images) != 1:\n",
+    "        thumbnail_img = image.resize((image_size, image_size))\n",
+    "        processed_images.append(thumbnail_img)\n",
+    "    return processed_images\n",
+    "\n",
+    "def load_image(image_file, input_size=448, max_num=12):\n",
+    "    image = Image.open(image_file).convert('RGB')\n",
+    "    transform = build_transform(input_size=input_size)\n",
+    "    images = dynamic_preprocess(image, image_size=input_size, use_thumbnail=True, max_num=max_num)\n",
+    "    pixel_values = [transform(image) for image in images]\n",
+    "    pixel_values = torch.stack(pixel_values)\n",
+    "    return pixel_values\n",
+    "\n",
+    "def split_model(model_name):\n",
+    "    device_map = {}\n",
+    "    world_size = torch.cuda.device_count()\n",
+    "    config = AutoConfig.from_pretrained(model_path, trust_remote_code=True)\n",
+    "    num_layers = config.llm_config.num_hidden_layers\n",
+    "    # Since the first GPU will be used for ViT, treat it as half a GPU.\n",
+    "    num_layers_per_gpu = math.ceil(num_layers / (world_size - 0.5))\n",
+    "    num_layers_per_gpu = [num_layers_per_gpu] * world_size\n",
+    "    num_layers_per_gpu[0] = math.ceil(num_layers_per_gpu[0] * 0.5)\n",
+    "    layer_cnt = 0\n",
+    "    for i, num_layer in enumerate(num_layers_per_gpu):\n",
+    "        for j in range(num_layer):\n",
+    "            device_map[f'language_model.model.layers.{layer_cnt}'] = i\n",
+    "            layer_cnt += 1\n",
+    "    device_map['vision_model'] = 0\n",
+    "    device_map['mlp1'] = 0\n",
+    "    device_map['language_model.model.tok_embeddings'] = 0\n",
+    "    device_map['language_model.model.embed_tokens'] = 0\n",
+    "    device_map['language_model.output'] = 0\n",
+    "    device_map['language_model.model.norm'] = 0\n",
+    "    device_map['language_model.model.rotary_emb'] = 0\n",
+    "    device_map['language_model.lm_head'] = 0\n",
+    "    device_map[f'language_model.model.layers.{num_layers - 1}'] = 0\n",
+    "\n",
+    "    return device_map\n",
+    "\n",
+    "path = 'OpenGVLab/InternVL3-2B'\n",
+    "device_map = split_model('InternVL3-2B')\n",
     "model = AutoModel.from_pretrained(\n",
-    "    \"OpenGVLab/InternVL3_5-2B\",\n",
-    "    dtype=torch.float16,    # FP16 for Jetson GPU\n",
+    "    path,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    load_in_8bit=True,\n",
     "    low_cpu_mem_usage=True,\n",
-    "    trust_remote_code=True, \n",
-    "    device_map=\"auto\"\n",
-    ").eval()  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "357e9f86-0d00-4812-85e0-344edc167bbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.float16"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "next(model.parameters()).dtype"
+    "    # use_flash_attn=True,\n",
+    "    trust_remote_code=True,\n",
+    "    device_map=device_map).eval()\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(path, trust_remote_code=True, use_fast=False)\n",
+    "\n",
+    "# set the max number of tiles in `max_num`\n",
+    "pixel_values = load_image('../tasks/bird.jpg', max_num=12).to(torch.bfloat16).cuda()\n",
+    "generation_config = dict(max_new_tokens=1024, do_sample=True)\n",
+    "\n",
+    "# pure-text conversation\n",
+    "question = 'Hello, who are you?'\n",
+    "response, history = model.chat(tokenizer, None, question, generation_config, history=None, return_history=True)\n",
+    "print(f'User: {question}\\nAssistant: {response}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a2f651e-b782-4ae8-b171-2a66be003e7e",
+   "id": "357e9f86-0d00-4812-85e0-344edc167bbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement decord (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for decord\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "from torchvision import transforms\n",
-    "\n",
-    "# Example: load a PIL image\n",
-    "img = Image.open(\"../tasks/bird.jpg\").convert(\"RGB\")\n",
-    "\n",
-    "preprocess = transforms.Compose([\n",
-    "    transforms.Resize((384, 384)),   # match model expectation\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.5]*3, std=[0.5]*3)\n",
-    "])\n",
-    "img_tensor = preprocess(img).unsqueeze(0).half().to(\"cuda\")\n"
+    "!pip install decord==0.6.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e6d9bf-049e-4a6a-bdbb-0baaa2849a07",
+   "id": "44fe7796-031f-4d09-b76b-61e14a39df0e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Test\n",
-    "question = \"Describe this image\"\n",
-    "\n",
-    "# Inference with no_grad (saves memory, disables gradient tracking)\n",
-    "with torch.no_grad():\n",
-    "    output = model.chat(\n",
-    "        tokenizer=tokenizer,\n",
-    "        pixel_values=img_tensor,\n",
-    "        question=question,\n",
-    "        generation_config=gen_config.to_dict(),\n",
-    "        history=None\n",
-    "    )\n",
-    "\n",
-    "print(output)\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8fd22bc-1560-4920-98fa-6c9d61398e30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
