--- a/hface/LiquidAI 1.6B.ipynb
+++ b/hface/LiquidAI 1.6B.ipynb
@@ -161,8 +161,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "862c735f-695f-48bb-ad81-fd09581e69bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Torch CUDA available: True\n",
+      "Torch CUDA version: 12.6\n",
+      "Torch device: Orin\n",
+      "BitsAndBytes works: 8-bit Linear layer initialized\n",
+      "BitsAndBytes library path: ['/home/opencv/kukil/vlm/lib/python3.10/site-packages/bitsandbytes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bitsandbytes as bnb\n",
+    "import torch\n",
+    "\n",
+    "# Check CUDA with PyTorch\n",
+    "print(\"Torch CUDA available:\", torch.cuda.is_available())\n",
+    "print(\"Torch CUDA version:\", torch.version.cuda)\n",
+    "print(\"Torch device:\", torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"No GPU\")\n",
+    "\n",
+    "# Check if bitsandbytes can load 8-bit linear layer\n",
+    "try:\n",
+    "    layer = bnb.nn.Linear8bitLt(128, 128)\n",
+    "    print(\"BitsAndBytes works: 8-bit Linear layer initialized\")\n",
+    "except Exception as e:\n",
+    "    print(\"BitsAndBytes CUDA test failed:\", e)\n",
+    "\n",
+    "# Check where the .so binary is located\n",
+    "print(\"BitsAndBytes library path:\", bnb.__path__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90fb4495-35db-4f96-9a94-63b5403c6c20",
    "metadata": {},
    "outputs": [],
    "source": []
