--- a/hface/SmolVLM.ipynb
+++ b/hface/SmolVLM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2abadb6a-b48d-43b5-a345-557a47d7f34d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "304036f7-c5fd-4e1e-af6a-01dc6f58cb62",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e81c43a82559445e9e9c71996f0c28b5",
+       "model_id": "497fea4c3c09434881108372235124de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,18 +55,13 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d1b3e95f704496aa05a529695389aa6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/136 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/opencv/kukil/vlm/lib/python3.10/site-packages/transformers/models/auto/modeling_auto.py:2242: FutureWarning: The class `AutoModelForVision2Seq` is deprecated and will be removed in v5.0. Please use `AutoModelForImageTextToText` instead.\n",
+      "  warnings.warn(\n",
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+     ]
     }
    ],
    "source": [
@@ -75,8 +70,30 @@
     "\n",
     "model = AutoModelForVision2Seq.from_pretrained(\n",
     "    \"HuggingFaceTB/SmolVLM-256M-Instruct\",\n",
-    "    torch_dtype=torch.bfloat16,\n",
+    "    dtype=torch.bfloat16,\n",
     ").to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "50aee293-132a-4ff5-836a-8e9ec96a98c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprit\u001b[49m(model)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'prit' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "prit(model)"
    ]
   },
   {
