--- a/Models/Moondream/Moondream1.ipynb
+++ b/Models/Moondream/Moondream1.ipynb
@@ -20,6 +20,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "052f192b-f9e4-4ed7-ab4f-5542a9ba5ed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.54.1'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import transformers\n",
+    "transformers.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "61526ef8-ae99-48bf-a675-e83a65976f3a",
    "metadata": {},
@@ -43,7 +65,6 @@
     "import torch\n",
     "from PIL import Image\n",
     "from transformers import AutoModelForCausalLM, CodeGenTokenizerFast as Tokenizer\n",
-    "\n",
     "\n",
     "model_id = \"vikhyatk/moondream1\"\n",
     "model = AutoModelForCausalLM.from_pretrained(model_id, trust_remote_code=True)\n",
